--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -1,10 +1,10 @@
 
-spring.jpa.database=POSTGRESQL
-spring.sql.init.platform=postgres
+#spring.jpa.database=POSTGRESQL
+#spring.sql.init.platform=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://dpg-cjpmbnlhe99c73aanfjg-a/dsm_db
 spring.datasource.username=ehis
 spring.datasource.password=5bIqMCRvwclL3JlTjmH12EFTszr3mlJe
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
