--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -2,9 +2,9 @@
 #spring.jpa.database=POSTGRESQL
 #spring.sql.init.platform=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://dpg-cjpmbnlhe99c73aanfjg-a/dsm_db
+spring.datasource.url=jdbc:postgresql://dpg-cjpmbnlhe99c73aanfjg-a.oregon-postgres.render.com/dsm_db
 spring.datasource.username=ehis
-spring.datasource.password=5bIqMCRvwclL3JlTjmH12EFTszr3mlJe
+spring.datasource.password=eK50AhT8wby65YeJbRkB1oXOpsm4qmue
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
