added department apis

--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -2,9 +2,15 @@
 #spring.jpa.database=POSTGRESQL
 #spring.sql.init.platform=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://dpg-cjpmbnlhe99c73aanfjg-a.oregon-postgres.render.com/dsm_db
+spring.datasource.url=jdbc:postgresql://dpg-ck6ok97sasqs73che0cg-a.oregon-postgres.render.com/dms_db_dxa9
 spring.datasource.username=ehis
-spring.datasource.password=eK50AhT8wby65YeJbRkB1oXOpsm4qmue
+spring.datasource.password=pCGVgcSnxsqiOpY6njR6TLIjzu9j2w9y
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
+
+#postgres://ehis:pCGVgcSnxsqiOpY6njR6TLIjzu9j2w9y@dpg-ck6ok97sasqs73che0cg-a/dms_db_dxa9
+#
+#postgres://ehis:pCGVgcSnxsqiOpY6njR6TLIjzu9j2w9y@dpg-ck6ok97sasqs73che0cg-a.oregon-postgres.render.com/dms_db_dxa9
+
+#PGPASSWORD=pCGVgcSnxsqiOpY6njR6TLIjzu9j2w9y psql -h dpg-ck6ok97sasqs73che0cg-a.oregon-postgres.render.com -U ehis dms_db_dxa9
